--- a/V3/rev.html
+++ b/V3/rev.html
@@ -10,20 +10,21 @@
 
         <meta charset="utf-8" />
         <title>Cheat Mode</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="styles.css" rel="stylesheet" />
         <link href="colors.css" rel="stylesheet" />
     </head>
     <body>
         <header>
-        <h1>My Favorites</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="rev.html">Game Reviews</a></li>
-                    <li><a href="dates.html">Review Schedule</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
-            </nav>
+        <h1>Reviews</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="rev.html">Game Reviews</a></li>
+                <li><a href="dates.html">Review Schedule</a></li>
+                <li><a href="about.html">About Us</a></li>
+            </ul>
+        </nav>
 
         <img src="Title3.jpg" alt="" /><!--This image was pulled from https://www.nintendoenthusiast.com/ocarina-of-time-still-only-metacritic-99-score/-->
         </header>
@@ -32,20 +33,81 @@
             I have always enjoyed gaming, and I have played hundreds throughout the years. As you might be able to guess, I have found games that I do love. Here are my top three games:
         </p>
         <div class="row">
-            <div class="col-2-3"></div>
+            <div class="col-2-3">
+                <!--M5LO4 Use CSS for pull-down menus-->
+
                 <div class="row">
                     <div class="col-1-3">
                         <img src="fav1.jpg" alt="" /><!--This image was pulled from http://www.gokuss7.com/blog/nintendo-n64-classic-mini/the-legend-of-zelda-ocarina-of-time/-->
-
                     </div>
+
+                    <div class="col-1-3">
+                        <article>
+                            <nav class="horizontal">
+                                <ul class="mainmenu">
+                                    <li><a href="#" class="submenuTitle">See More</a>
+                                        <ul class="submenu">
+                                            <li><h3>The Legendof Zelda: Ocarina of time</h3></li>
+                                            <li>Platforms:<br>Nintendo 64, Game Cube, Nintendo 3DS</li>
+                                            <li>Year:<br>1998</li>
+                                            <li>Play as the protagonist Link on his Quest to save the land of Hyrule from the Demon King Ganondorf. </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </article>
+                    </div>
+                </div>  
                     
-                    <div class="col-1-3">
-                        <img src="fav2.jpg" alt="" /><!--This image was pulled from https://www.amazon.com/Super-Smash-Bros-Ultimate-Nintendo/dp/B07DMFRNF9-->
+                <div class="row">
+                    <div class="col-2-3">
+                        <div class="col-1-3">
+                            <img src="fav2.jpg" alt="" /><!--This image was pulled from https://www.amazon.com/Super-Smash-Bros-Ultimate-Nintendo/dp/B07DMFRNF9-->
+                        </div>
+                        
+                        <div class="col-1-3">
+                            <article>
+                                <nav class="horizontal">
+                                    <ul class="mainmenu">
+                                        <li><a href="#" class="submenuTitle">See More</a>
+                                            <ul class="submenu">
+                                                <li><h3>Super Smash Bros: Ultimate</h3></li>
+                                                <li>Platforms:<br>Nintendo Switch</li>
+                                                <li>Year:<br>2018</li>
+                                                <li>Play as over 70+ characters from the Nintendo games and other third party games in this all-star lineup. </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </article>
+                        </div>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-2-3">
+                        <div class="col-1-3">
+                            <img src="fav3.jpg" alt="" /><!--This image was pulled from https://www.amazon.com/Last-Us-PlayStation-3-sony-playstation3/dp/B007CM0K86-->
+                        </div>
 
                     <div class="col-1-3">
-                        <img src="fav3.jpg" alt="" /><!--This image was pulled from https://www.amazon.com/Last-Us-PlayStation-3-sony-playstation3/dp/B007CM0K86-->
+                        <article>
+                            <nav class="horizontal">
+                                <ul class="mainmenu">
+                                    <li><a href="#" class="submenuTitle">See More</a>
+                                        <ul class="submenu">
+                                            <li><h3>The Last of US</h3></li>
+                                            <li>Platforms:<br>Play Station 3, Play Station 4</li>
+                                            <li>Year:<br>2013</li>
+                                            <li>Play as Joel as he escorts a young girl named Ellie through a Post-apocalyptic world filled with fungus infected individuals. </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </article>
                     </div>
+                </div>
+
                 </div>
             </div>
         </div>
