--- a/V3/about.html
+++ b/V3/about.html
@@ -10,6 +10,7 @@
 
         <meta charset="utf-8" />
         <title>Easy Mode Explained</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="styles.css" rel="stylesheet" />
         <link href="colors.css" rel="stylesheet" />
     </head>
