--- a/V3/rev.html
+++ b/V3/rev.html
@@ -92,18 +92,15 @@
 
                     <div class="col-1-3">
                         <article>
-                            <nav class="horizontal">
-                                <ul class="mainmenu">
-                                    <li><a href="#" class="submenuTitle">See More</a>
-                                        <ul class="submenu">
-                                            <li><h3>The Last of US</h3></li>
-                                            <li>Platforms:<br>Play Station 3, Play Station 4</li>
-                                            <li>Year:<br>2013</li>
-                                            <li>Play as Joel as he escorts a young girl named Ellie through a Post-apocalyptic world filled with fungus infected individuals. </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </nav>
+                            <div class="dropdown">
+                                <button onclick="myFunction()" class="dropbtn">More</button>
+                                    <div id="myDropdown" class="dropdown-content">
+                                            <h3>The Last of US</h3>
+                                            <a href="#">Platforms:<br>Play Station 3, Play Station 4</a>
+                                            <a href="#">Year:<br>2013</a>
+                                            <a href="#">Play as Joel as he escorts a young girl named Ellie through a Post-apocalyptic world filled with fungus infected individuals.</a>
+                                    </div>
+                            </div>
                         </article>
                     </div>
                 </div>
