--- a/V3/about.html
+++ b/V3/about.html
@@ -35,16 +35,16 @@
             <p>
                 For those who do not play games, just got into games or just want to browse, you can look around and you might find something that piques your interest. This site is currently under construction and being updated every week…ish. So come back every now and again and who know what you might find.
             </p>
-        <h2>What we added in V2:</h2>
+        <h2>What we added in V3:</h2>
             <nav>
                 <ol>
-                    <li>The My Favorites Web pages has been added</li>
-                    <li>The Style Sheet has been updated</li>
-                    <li>The images on the pages have been changed and ajusted</li>
-                    <li>The genres have set up in a grid</li>
-                    <li>The dots in the listed items have been removed</li>
-                    <li>The navigational section at the top has been lined up horizontally</li>
-                    <li>Pictures have been added under the My Favorites</li>
+                    <li>The Review Schedule Web pages has been added</li>
+                    <li>The Style Sheets has been updated</li>
+                    <li>Style Sheets have been split</li>
+                    <li>The faves tav has become a Review tab</li>
+                    <li>Added hidden objects to the reviews tab</li>
+                    <li>Added a calender to the schedules tab</li>
+                    <li>Ajusted some sized for phones (Not too Well)</li>
                 </ol>
             </nav>
         <footer>
