--- a/V3/index.html
+++ b/V3/index.html
@@ -44,6 +44,7 @@
                 <div class="row">
                     <div class="col-1-2">
                         <article>
+                            <aside>
                             <h2 id="RPG">RPG (Role Playing Games)</h2>
                                 <p>
                                     Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
@@ -58,10 +59,12 @@
                                         <li><a href="https://atlus.com/p5r/lang/en/">Persona 5 Royale</a></li>
                                     </ul>
                                 </nav>
+                            </aside>
                         </article>
                     </div>
                     <div class="col-1-2">
                         <article>
+                            <aside>
                             <h2 id="FPS">FPS (First Person Shooter)</h2>
                                 <p>
                                     First person shooters put the player in a first-person point of view, where the player must use a variety of firearms to progress through a scenario or battlefield. Go at it by yourself or with a team, manage your ammo, environment and reaction speed to come out victorious.
@@ -76,6 +79,7 @@
                                         <li><a href="https://www.pubg.com/en-us/">PUBG</a></li>
                                     </ul>
                                 </nav>
+                            </aside>
                         </article>
                     </div>
                 </div>
@@ -83,6 +87,7 @@
                 <div class="row">
                     <div class="col-1-2">
                         <article>
+                            <aside>
                             <h2 id="FGT">Fighting</h2>
                                 <p>
                                     Fighting games place the player in an (often) one on one fight with another player or AI. The fast pace and often strategical fighting and combo mechanics often lead to quick but exciting matches. Compete in tournaments or against others for honor, glory, and bragging rights.
@@ -97,11 +102,13 @@
                                         <li><a href="https://www.bandainamcoent.com/games/dragon-ball-fighterz">Dragon Ball FighterZ</a></li>
                                     </ul>
                                 </nav>
+                            <aside>
                         </article>
                     </div>
 
                     <div class="col-1-2">
                         <article>
+                            <aside>
                             <h2 id="SIM">Simulation</h2>
                                 <p>
                                     Simulation games tone down the rush of other games and place you in an experience that you can enjoy at your own pace. Often these games involve farming, flying, and other real-world activities. Often these games can provide hours of fun that can be picked back up at any time.
@@ -115,6 +122,7 @@
                                         
                                     </ul>
                                 </nav>
+                            </aside>
                         </article>
                     </div>
                 </div>
