--- a/V3/dates.html
+++ b/V3/dates.html
@@ -25,7 +25,7 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
-        <img src="Title4.jpg" alt="" /><!--This image was pulled from https://www.nintendoenthusiast.com/ocarina-of-time-still-only-metacritic-99-score/-->
+        <img src="title4.jpg" alt="" /><!--This image was pulled from https://www.nintendoenthusiast.com/ocarina-of-time-still-only-metacritic-99-score/-->
         </header>
         <h2>Upcoming Review Schedule</h2>
         <p>
