--- a/V3/index.html
+++ b/V3/index.html
@@ -37,7 +37,7 @@
 
         <div class="row">
             <div class="col-2-3"></div>
-            <!--M3LO2 Demonstrate floating elements
+                <!--M3LO2 Demonstrate floating elements
                 M3LO3 Demonstrate a clearing floats 
                 M3LO6 Demonstrate formatting a grid-->
 
@@ -45,11 +45,11 @@
                     <div class="col-1-2">
                         <article>
                             <aside>
-                            <h2 id="RPG">RPG (Role Playing Games)</h2>
+                                <h2 id="RPG">RPG (Role Playing Games)</h2>
                                 <p>
                                     Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
                                 </p>
-                            <h3>Popular games in this genre</h3>
+                                <h3>Popular games in this genre</h3>
                                 <nav>
                                     <ul>
                                         <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
@@ -65,11 +65,11 @@
                     <div class="col-1-2">
                         <article>
                             <aside>
-                            <h2 id="FPS">FPS (First Person Shooter)</h2>
+                                <h2 id="FPS">FPS (First Person Shooter)</h2>
                                 <p>
                                     First person shooters put the player in a first-person point of view, where the player must use a variety of firearms to progress through a scenario or battlefield. Go at it by yourself or with a team, manage your ammo, environment and reaction speed to come out victorious.
                                 </p>
-                            <h3>Popular games in this genre</h3>
+                                <h3>Popular games in this genre</h3>
                                 <nav>
                                     <ul>
                                         <li><a href="https://bethesda.net/en/game/doom">Doom: Eternal</a></li>
@@ -102,18 +102,18 @@
                                         <li><a href="https://www.bandainamcoent.com/games/dragon-ball-fighterz">Dragon Ball FighterZ</a></li>
                                     </ul>
                                 </nav>
-                            <aside>
+                            </aside>
                         </article>
                     </div>
 
                     <div class="col-1-2">
                         <article>
                             <aside>
-                            <h2 id="SIM">Simulation</h2>
+                                <h2 id="SIM">Simulation</h2>
                                 <p>
                                     Simulation games tone down the rush of other games and place you in an experience that you can enjoy at your own pace. Often these games involve farming, flying, and other real-world activities. Often these games can provide hours of fun that can be picked back up at any time.
                                 </p>
-                            <h3>Popular games in this genre</h3>
+                                <h3>Popular games in this genre</h3>
                                 <nav>
                                     <ul>
                                         <li><a href="https://www.kerbalspaceprogram.com/">Kerbal Space Program</a></li>
@@ -128,7 +128,6 @@
                 </div>
             </div>
         </div>
-    </body>
 
         <footer>
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
