--- a/V4/form.html
+++ b/V4/form.html
@@ -32,6 +32,7 @@
 
         <section>
             <h2>Review Request Form</h2>
+            <!--M7LO5 Demonstrate the use of a text box in a form-->
             <p>Required Item (*)</p>
             <form action="http://www.example.com/cg/register" method="post">
             
@@ -47,6 +48,7 @@
             <label for="mailbox">E-Mail*</label>
             <input name="email" id="mailbox" type="email" />
         </div>
+        <!--M7LO8 Demonstrate the use of a selection list in a form-->
         <div class="formRow"></div>
             <label for="ratebox">Game Rating</label>
             <input name="rateType" id="ratebox" type="text" list="ratelist" />
@@ -58,10 +60,12 @@
               <option value="&#8902;&#8902;&#8902;&#8902;&#8902;" />
             </datalist>
         </div>
+        <!--M7LO9 Demonstrate the use of a text area in a form-->
         <div class="formRow"></div>
             <label for="revbox">Review</label>
             <textarea name="review" id="revbox" type="text" required></textarea>
         </div>
+        <!--M7LO10 Demonstrate the use of a submit button in a form-->
         <div class="formRow"></div>
             <p>
               <input type="submit" value="Submit" >
