--- a/V4/rev.html
+++ b/V4/rev.html
@@ -47,6 +47,8 @@
                         </ul>
                     </li>
                 </ul>
+                <!--M8LO8 Demonstrate the use of the <video> element for embedding video in a Web page-->
+                <!--M8LO9  Demonstrate the use of the iframe element-->
                 <iframe width="420" height="315"
                 src="https://www.youtube.com/embed/Jfg6RfClZJg">
                 </iframe>
