--- a/V4/form.html
+++ b/V4/form.html
@@ -36,20 +36,20 @@
             <p>Required Item (*)</p>
             <form action="http://www.example.com/cg/register" method="post">
             
-        <div class="formRow"></div>
+        <div class="formRow">
             <label for="gnbox">Game Title*</label>
             <input name="gamename" id="gnbox" type="text" required />
         </div>
-        <div class="formRow"></div>
+        <div class="formRow">
             <label for="nbox">Your Name*</label>
             <input name="name" id="nbox" type="text" required />
         </div> 
-        <div class="formRow"></div>
+        <div class="formRow">
             <label for="mailbox">E-Mail*</label>
             <input name="email" id="mailbox" type="email" />
         </div>
         <!--M7LO8 Demonstrate the use of a selection list in a form-->
-        <div class="formRow"></div>
+        <div class="formRow">
             <label for="ratebox">Game Rating</label>
             <input name="rateType" id="ratebox" type="text" list="ratelist" />
             <datalist id="ratelist">
@@ -61,12 +61,12 @@
             </datalist>
         </div>
         <!--M7LO9 Demonstrate the use of a text area in a form-->
-        <div class="formRow"></div>
+        <div class="formRow">
             <label for="revbox">Review</label>
             <textarea name="review" id="revbox" type="text" required></textarea>
         </div>
         <!--M7LO10 Demonstrate the use of a submit button in a form-->
-        <div class="formRow"></div>
+        <div class="formRow">
             <p>
               <input type="submit" value="Submit" >
             </p>
