--- a/V4/form.html
+++ b/V4/form.html
@@ -34,7 +34,7 @@
             <h2>Review Request Form</h2>
             <!--M7LO5 Demonstrate the use of a text box in a form-->
             <p>Required Item (*)</p>
-            <form action="http://www.example.com/cg/register" method="post">
+        <form action="http://www.example.com/cg/register" method="post">
             
         <div class="formRow">
             <label for="gnbox">Game Title*</label>
@@ -53,11 +53,11 @@
             <label for="ratebox">Game Rating</label>
             <input name="rateType" id="ratebox" type="text" list="ratelist" />
             <datalist id="ratelist">
-              <option value="&#8902;" />
-              <option value="&#8902;&#8902;" />
-              <option value="&#8902;&#8902;&#8902;" />
-              <option value="&#8902;&#8902;&#8902;&#8902;" />
-              <option value="&#8902;&#8902;&#8902;&#8902;&#8902;" />
+              <option value="&#8902;">
+              <option value="&#8902;&#8902;">
+              <option value="&#8902;&#8902;&#8902;">
+              <option value="&#8902;&#8902;&#8902;&#8902;">
+              <option value="&#8902;&#8902;&#8902;&#8902;&#8902;">
             </datalist>
         </div>
         <!--M7LO9 Demonstrate the use of a text area in a form-->
@@ -72,7 +72,7 @@
             </p>
         </div>
          </section>
-
+        </form>
 
         <footer>
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
