--- a/V4/form.html
+++ b/V4/form.html
@@ -34,7 +34,7 @@
             <h2>Review Request Form</h2>
             <!--M7LO5 Demonstrate the use of a text box in a form-->
             <p>Required Item (*)</p>
-        <form action="http://www.example.com/cg/register" method="post">
+        <form action="http://www.example.com/cg/register" method="post"></form>
             
         <div class="formRow">
             <label for="gnbox">Game Title*</label>
@@ -71,8 +71,7 @@
               <input type="submit" value="Submit" >
             </p>
         </div>
-         </section>
-        </form>
+        </section>
 
         <footer>
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
